--- a/customer_churn.ipynb
+++ b/customer_churn.ipynb
@@ -5770,10 +5770,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f6234f5",
+   "metadata": {},
+   "source": [
+    "# Conclusão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "08e55d07",
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24ea47ad",
+   "metadata": {},
+   "source": [
+    "Após a avaliação de vários modelos  analisámos as métricas de desempenho mais relevantes para o problema de previsão de churn, nomeadamente: precisão, recall, F1-score e ROC AUC.\n",
+    "\n",
+    "Dado que o nosso objetivo é identificar clientes que estão prestes a cancelar o serviço, métricas como o recall e o F1-score tornam-se especialmente importantes — pois permitem não só detetar um maior número de desistências reais, mas também manter um equilíbrio entre verdadeiros positivos e falsos positos.\n",
+    "\n",
+    "Entre os modelos avaliados, o Random Forest destacou-se como a melhor escolha, apresentando o melhor desempenho geral, com um valor de ROC AUC de 0.8428, e uma boa relação entre precisão e recall (F1-score de 0.5774). Este modelo mostra-se robusto, consistente e com boa capacidade de generalização, sendo ideal para este tipo de tarefa.\n",
+    "\n",
+    "\n",
+    "Tendo em conta o equilíbrio entre as diferentes métricas e a estabilidade do modelo, recomenda-se seguir com o Random Forest como solução principal para a previsão de churn neste contexto."
    ]
   }
  ],
